--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ section:nth-child(6) {
   transition: all 0.15s ease-out;
 }
 .nav__title {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   font-size: 32px;
   font-weight: 300;
   margin: 0 0 0.25em;
@@ -88,6 +88,7 @@ section:nth-child(6) {
 }
 .nav__body {
   font-family: var(--text-font-family);
+  font-style: italic;
   font-weight: 100;
   font-size: 18px;
   width: 300px;
@@ -167,7 +168,7 @@ h1 {
   color: #333;
 }
 h1 span {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   display: inline-block;
   animation: slideLeft 1.5s forwards;
   opacity: 0;
@@ -187,7 +188,7 @@ h1 span {
 
 
 .overlay>h2{
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   color: var(--text-color);
   animation: ani 2s;
   text-align: center;
@@ -375,7 +376,7 @@ h1 span {
   right: -15px;
 }
 .main-timeline .title {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   font-size: 22px;
   font-weight: 600;
   letter-spacing: 0.5px;
@@ -479,7 +480,7 @@ h1 span {
 
 
 .panel p {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   text-transform: uppercase;
   text-shadow:0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
   font-size: 2em;
@@ -546,9 +547,9 @@ h1 span {
 }
 
 .header h1 {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   font-weight: 400;
-  font-size: 36px;
+  font-size: 38px;
   letter-spacing: 2px;
   font-variant: small-caps;
   margin-top: 0px;
@@ -557,7 +558,7 @@ h1 span {
 }
 
 .header h2 {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   font-weight: 300;
   font-size: 26px;
   letter-spacing: 2px;
@@ -566,7 +567,7 @@ h1 span {
 }
 
 .header h3 {
-  font-family: 'Saira', sans-serif;
+  font-family: var(--title-font-family);
   font-weight: 300;
   font-size: 16px;
   letter-spacing: 1px;
