--- a/style.css
+++ b/style.css
@@ -1,19 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Saira:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap');
 
 :root {
   --text-color: #ececec;
-  --icon-background-color: #6f975d;
+  --icon-background-color: #065A82;
   --brand-color-html5: #e34f26;
-  --brand-color-css3: #1b629c;
+  --brand-color-css3: #1187e7;
   --brand-color-js: #f9d405;
-  --brand-color-php: #570ef3;
+  --brand-color-php: #374bff;
   --brand-color-bootstrap: rgb(112, 48, 185);
   --brand-color-database: #b52e31;
   --brand-color-symfony: #000000;
 
   --title-font-family: 'Saira', sans-serif;
-  --text-font-family:'Anonymous Pro', monospace;
+  --text-font-family:'Roboto Condensed', sans-serif;
 }
 
 .wrapper {
@@ -37,21 +37,21 @@ section:nth-child(1) {
   background: white;
 }
 section:nth-child(2) {
-  background: #177E89;
+  background: #49859D;
 }
 section:nth-child(3) {
-  background: #7FB069;
+  background: #1C7293;
   flex-direction: column;
   justify-content: flex-start;
 }
 section:nth-child(4) {
-  background: #c25e36;
+  background: #065A82;
 }
 section:nth-child(5) {
-  background: #242425;
+  background: #1B3B6F;
 }
 section:nth-child(6) {
-  background: #343033;
+  background: #21295C;
 }
 /* section:nth-child(7) {
   background: #ffcc00;
@@ -229,7 +229,7 @@ h1 span {
 }
 .social .social__media li {
   display: inline-flex;
-  margin: 2rem 2rem -13rem;
+  margin: 1rem 2rem -13rem;
 }
 .social .social__media li:nth-child(1) a:hover i {
   color: var(--brand-color-html5);
@@ -300,19 +300,19 @@ h1 span {
 
 /* ===== TEXTE COMPETENCES ===== */
 .comp-box {
+  background-color: #065A82;
   width: 54%;
-  padding-right: 40px;
+  padding: 50px 50px 50px 10px;
   margin: 0 auto;
-}
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;}
 
 .comp {
-  font-family: 'Anonymous Pro', monospace;
+  font-family: var(--text-font-family);
   margin: 10px 0 0 50px;
   text-align: justify;
-  font-size: 0.6em;
+  font-size: 0.56em;
   font-weight:400;
   color: #ffffff;
-  /* text-shadow: 0 2px 2px #25255c,0 -2px 2px rgb(255, 254, 220); */
 }
 
 
@@ -428,7 +428,7 @@ h1 span {
   width: 100%;
   height: 99%;
   display: flex;
-  padding-left: 364px;
+  padding-left: 334px;
   padding-right: 6px;
   cursor:zoom-in;
 }
