--- a/style.css
+++ b/style.css
@@ -767,10 +767,10 @@ h1 span {
   }
 
   div.row {
-    max-width: 630px;
+    max-width: 628px;
     margin-left: 40px;
     margin-right: 8px;
-    margin-top: 30px;
+    margin-top: 20px;
   }
 
   .main-timeline .timeline-year {
@@ -791,7 +791,7 @@ h1 span {
     flex-direction: column;
     padding-left: 70px;
     padding-right: 50px;
-    margin-top: 4px;
+    margin: 50px 0;
   }
  
   section.section5 {
