--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ h1 span {
   background-color: #065A82;
   width: 54%;
   padding: 50px 50px 50px 10px;
-  margin: 0 auto;
+  margin: 0 auto 20px;
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;}
 
 .comp {
@@ -604,21 +604,21 @@ h1 span {
   top: 0px;
   right: 0px;
   list-style: none;
-  padding: 20px 0;
+  padding: 40px 0;
 }
 
 .li {
-  height: 25%;
-  /*border:1px solid gray;*/
+  height: 38%;
 }
 
-.li img {
-  padding: 10px;
+.li i {
+  text-align: center;
   width: 40px;
   display: block;
   margin: 0 auto;
   transform: translate(0%, 40%);
   -webkit-transform: translate(0%, 40%);
+  color: white;
 }
 
 .li img:hover {
@@ -820,17 +820,20 @@ h1 span {
   }
 
   .profile-social-links {
-    background: #5e5c5c;
+    background: #000000;
     width: 54px;
   }
 
   .profile-card {
-
     -webkit-transform: none;
     -webkit-transform-origin: none;
     transition: all 0.4s ease;
     -webkit-animation: hovertouch 1.3s ease-in-out infinite;
     animation: hovertouch 1.3s ease-in-out infinite;
 }
+
+  .header img {
+    width: 94px;
+  }
 
 }
