--- a/style.css
+++ b/style.css
@@ -600,6 +600,10 @@ h1 span {
   margin-bottom: 12px;
 }
 
+.header h3 i{
+ padding-right: 1px;
+}
+
 .profile-bio {
   font-family: var(--text-font-family);
   font-size: 14px;
@@ -782,8 +786,12 @@ ul> li> a:hover {
     height: 5rem;
   }
 
-  .social .social__media li a i {
-    font-size: 3.4rem;
+  .social .social__media li a iconify-icon  {
+    font-size: 4rem;
+  }
+
+  .social .social__media li a:hover iconify-icon {
+    transform: scale3d(1.3, 1.3, 1.3);
   }
 
   .comp-box {
@@ -835,26 +843,52 @@ ul> li> a:hover {
   .profile-card {
     background: #232222;
     color: #ffffff;
-    width: 280px;
+    width: 290px;
     height: 430px;
     margin-top: 0;
   }
 
+  .profile-card p {
+    width: 206px;
+    font-size: 0.9em;
+    line-height: 16px;
+  }
+
+  .header {
+    margin-bottom: 0px;
+  }
+
+  .header img {
+    width: 124px;
+    margin-bottom: 4px;
+  }
+
   .header h1 {
     font-size: 28px;
+    margin-top: -8px;
+    margin-bottom: -6px;
   }
 
   .header h2 {
-    font-size: 22px;
+    font-size: 13px;
+    margin-bottom: 6px;
   }
 
   .header h3 {
-    font-size: 12px;
+    font-size: 10px;
+  }
+
+  .profile-bio {
+    padding-left: 6px;
+  }
+
+  .profile-bio:before {
+    left: -6px;
   }
 
   .profile-social-links {
     background: #000000;
-    width: 54px;
+    width: 50px;
   }
 
   .profile-card {
@@ -864,10 +898,6 @@ ul> li> a:hover {
     -webkit-animation: hovertouch 1.3s ease-in-out infinite;
     animation: hovertouch 1.3s ease-in-out infinite;
 }
-
-  .header img {
-    width: 94px;
-  }
 
   .card-icon {
     color: #ffffff;
